<resources>
    <string name="app_name">Blog Post</string>
    <string name="user_password">Password...</string>
    <string name="user_email">Your Email. . .</string>
    <string name="LOGIN_TO_ACCOUNT">LOGIN TO ACCOUNT</string>
    <string name="CREATE_NEW_ACCOUNT">CREATE A NEW ACCOUNT</string>
    <string name="Confirm_Password_Text">Confirm password...</string>
    <string name="Reg_btn_text">CREATE EMAIL</string>
    <string name="Already_Have_Email">ALREADY HAVE AN ACCOUNT</string>
    <string name="Action_Search_Text">Search</string>
    <string name="Action_Settings_Text">Settings</string>
    <string name="Action_LogOut_Text">Log Out</string>
    <string name="Set_Image_View">Set_Image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
