<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    tools:context="in.el_diasty.fireapp.Activites.RegActivity">

    <ImageView
        android:id="@+id/LoginPage_Logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        app:srcCompat="@mipmap/login_page_logo" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LoginPage_Logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:hint="@string/user_email"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/textHint"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/email"
        android:layout_below="@+id/email"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:hint="@string/user_password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/textHint" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/password"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:hint="@string/Confirm_Password_Text"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/textHint"
        android:textSize="18sp" />

    <Button
        android:id="@+id/Login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/confirmPassword"
        android:backgroundTint="@color/colorAccent"
        android:onClick="CreateAccount"
        android:paddingBottom="22dp"
        android:paddingTop="22dp"
        android:text="@string/Reg_btn_text"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/Register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@android:color/white"
        android:onClick="AlreadyHaveAccount"
        android:paddingBottom="22dp"
        android:paddingTop="22dp"
        android:text="@string/Already_Have_Email"
        android:textColor="@color/colorAccent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.DeviceDefault.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/common_google_signin_btn_text_dark_focused"
        android:indeterminate="true"
        android:indeterminateTint="@android:color/holo_orange_light"
        android:visibility="invisible"
        tools:visibility="visible"/>

</RelativeLayout>
